Time: 10 ms (25.42%), Space: 41.3 MB (19.31%) - LeetHub